--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="zoom-out">
-            <h1 style="color:rgb(234, 157, 63)">Better Solutions For Your Business</h1>
-            <p style="color:rgb(234, 157, 63)">We are team of talented designers making websites with Bootstrap</p>
+            <h1 style="color:rgb(234, 157, 63)">Empowering Your Business with Scalable Cloud Solutions</h1>
+            <p style="color:rgb(234, 157, 63)">Innovative cloud infrastructure tailored to your needs. Delivering high-performance, reliable, and secure services to fuel your business growth.</p>
             <div class="d-flex">
               <a href="#about" class="btn-get-started yellow">Get Started</a>
               <a href="#" class="glightbox btn-watch-video d-flex align-items-center" style="color:rgb(234, 157, 63);"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
@@ -191,18 +191,17 @@
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            Transform Your Business with Our Comprehensive and Scalable Cloud Solutions
             </p>
             <ul>
-              <li><i class="bi bi-check2-circle" style="color:rgb(234, 157, 63)"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-circle" style="color:rgb(234, 157, 63)"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-circle" style="color:rgb(234, 157, 63)"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo</span></li>
+              <li><i class="bi bi-check2-circle" style="color:rgb(234, 157, 63)"></i> <span>IaaS: Flexible, on-demand cloud infrastructure for any scale.</span></li>
+              <li><i class="bi bi-check2-circle" style="color:rgb(234, 157, 63)"></i> <span>Cloud Migration: Effortless, secure cloud transitions.</span></li>
+              <li><i class="bi bi-check2-circle" style="color:rgb(234, 157, 63)"></i> <span>Managed Cloud: Optimized cloud management, stress-free.</span></li>
             </ul>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+            <p>At Cloud Hub, we don’t just offer cloud computing solutions — we provide businesses with the tools to innovate, scale, and succeed. Our cloud services are designed with flexibility, security, and performance in mind, ensuring your business operates at its best. Whether you’re looking to optimize costs, enhance security, or accelerate growth, Cloud Hub is here to help you make the cloud work for you.</p>
             <a href="#" class="read-more yellow"><span >Read More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
