--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
       <!-- Section Title -->
       <div class="container section-title " data-aos="fade-up">
-        <h2 style="color:rgb(234, 157, 63)">About Us</h2>
+        <h2 style="color:rgb(234, 157, 63)">About Cloud Hub</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -213,65 +213,64 @@
 
     <hr>
 
-    <!-- Why Us Section -->
-    <section id="why-us" class="section why-us black" data-builder="section">
+    
+<!-- Why Us Section -->
+<section id="why-us" class="section why-us black" data-builder="section">
 
-      <div class="container-fluid">
+  <div class="container-fluid">
 
-        <div class="row gy-4 ">
+    <div class="row gy-4">
 
-          <div class="col-lg-7 d-flex flex-column justify-content-center order-2 order-lg-1" >
+      <div class="col-lg-7 d-flex flex-column justify-content-center order-2 order-lg-1">
 
-            <div class="content px-xl-5" data-aos="fade-up" data-aos-delay="100">
-              <h3 style="color:rgb(234, 157, 63)"><span>Eum ipsam laborum deleniti </span><strong>velit pariatur architecto aut nihil</strong></h3>
-              <p style="color:rgb(234, 157, 63)">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-              </p>
+        <div class="content px-xl-5" data-aos="fade-up" data-aos-delay="100">
+          <h3 style="color:rgb(234, 157, 63)"><span>Discover the Cloud Hub Advantage</span><strong> – Your Partner in Cloud Innovation</strong></h3>
+          <p style="color:rgb(234, 157, 63)">
+            At **Cloud Hub**, we redefine your cloud experience with tailored solutions that drive growth, enhance security, and optimize performance. Let us show you why we are the right choice for your cloud journey.
+          </p>
+        </div>
+
+        <div class="faq-container px-xl-5" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="faq-item faq-active yellow">
+            <h3 style="color: black;"><span style="color: black;">01</span> Why is Cloud Hub the right choice for my business?</h3>
+            <div class="faq-content">
+              <p>We offer customized cloud solutions designed to fit your unique business needs, ensuring you get the most out of your cloud investment.</p>
             </div>
+            <i class="faq-toggle bi bi-chevron-right" style="color: blueviolet;"></i>
+          </div><!-- End Faq item-->
 
-            <div class="faq-container px-xl-5" data-aos="fade-up" data-aos-delay="200">
-
-              <div class="faq-item faq-active yellow">
-
-                <h3 style="color: black;"><span style="color: black;">01</span> Non consectetur a erat nam at lectus urna duis?</h3>
-                <div class="faq-content">
-                  <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right" style="color: blueviolet;"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item yellow">
-                <h3 style="color: black;"><span style="color: black;">02</span> Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h3>
-                <div class="faq-content">
-                  <p >Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right" style="color: blueviolet;"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item yellow">
-                <h3 style="color: black;"><span style="color: black;">03</span> Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
-                <div class="faq-content">
-                  <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right" style="color:blueviolet ;"></i>
-              </div><!-- End Faq item-->
-
+          <div class="faq-item yellow">
+            <h3 style="color: black;"><span style="color: black;">02</span> What kind of support can I expect?</h3>
+            <div class="faq-content">
+              <p>Our dedicated support team is available 24/7 to assist you with any questions or concerns, providing peace of mind every step of the way.</p>
             </div>
+            <i class="faq-toggle bi bi-chevron-right" style="color: blueviolet;"></i>
+          </div><!-- End Faq item-->
 
-          </div>
+          <div class="faq-item yellow">
+            <h3 style="color: black;"><span style="color: black;">03</span> How secure is my data in the cloud?</h3>
+            <div class="faq-content">
+              <p>Your security is our top priority. We implement industry-leading security measures to protect your data and ensure compliance with regulations.</p>
+            </div>
+            <i class="faq-toggle bi bi-chevron-right" style="color: blueviolet;"></i>
+          </div><!-- End Faq item-->
 
-          
-
-          <div class="col-lg-5 order-1 order-lg-2 why-us-img">
-            <img src="assets/img/why-us.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
-          </div>
         </div>
 
       </div>
 
-    </section><!-- /Why Us Section -->
+      <div class="col-lg-5 order-1 order-lg-2 why-us-img">
+        <img src="assets/img/why-us.png" class="img-fluid" alt="" data-aos="zoom-in" data-aos-delay="100">
+      </div>
+    </div>
 
-    <hr>
+  </div>
+
+</section><!-- /Why Us Section -->
+
+<hr>
+
 
     <!-- Skills Section -->
     <section id="skills" class="skills section black">
