--- a/index.html
+++ b/index.html
@@ -864,96 +864,92 @@
 
 </section><!-- /Faq 2 Section -->
     <hr> 
+<!-- Contact Section -->
+<section id="contact" class="contact section black">
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section black">
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2 style="color:rgb(234, 157, 63)">Contact</h2>
+    <p>Feel free to reach out to us for any inquiries or support. We're here to help!</p>
+  </div><!-- End Section Title -->
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2 style="color:rgb(234, 157, 63)">Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-      <div class="container " data-aos="fade-up" data-aos-delay="100">
+    <div class="row gy-4">
 
-        <div class="row gy-4">
+      <div class="col-lg-5">
 
-          <div class="col-lg-5">
-
-            <div class="info-wrap yellow rounded">
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-geo-alt flex-shrink-0" style="color: black;"></i>
-                <div>
-                  <h3 style="color: black;">Address</h3>
-                  <p style="color: black;">A108 Adam Street, New York, NY 535022</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-telephone flex-shrink-0" style="color: black;"></i>
-                <div>
-                  <h3 style="color: black;">Call Us</h3>
-                  <p style="color: black;">+1 5589 55488 55</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-                <i class="bi bi-envelope flex-shrink-0" style="color: black;"></i>
-                <div>
-                  <h3 style="color: black;">Email Us</h3>
-                  <p style="color: black;">info@example.com</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="info-wrap yellow rounded">
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+            <i class="bi bi-geo-alt flex-shrink-0" style="color: black;"></i>
+            <div>
+              <h3 style="color: black;">Address</h3>
+              <p style="color: black;">279B, Gulgasht Colony, Multan, Punjab</p>
             </div>
-          </div>
+          </div><!-- End Info Item -->
 
-          <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form yellow" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4 ">
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+            <i class="bi bi-telephone flex-shrink-0" style="color: black;"></i>
+            <div>
+              <h3 style="color: black;">Call Us</h3>
+              <p style="color: black;">+92 319 7198382</p>
+            </div>
+          </div><!-- End Info Item -->
 
-                <div class="col-md-6">
-                  <label for="name-field" class="pb-2" style="color: black;">Your Name</label>
-                  <input type="text" name="name" id="name-field" class="form-control" required="">
-                </div>
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+            <i class="bi bi-envelope flex-shrink-0" style="color: black;"></i>
+            <div>
+              <h3 style="color: black;">Email Us</h3>
+              <p style="color: black;">talhaameen0001@gmail.com</p>
+            </div>
+          </div><!-- End Info Item -->
 
-                <div class="col-md-6">
-                  <label for="email-field" class="pb-2" style="color: black;">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email-field" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <label for="subject-field" class="pb-2" style="color: black;">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject-field" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <label for="message-field" class="pb-2" style="color: black;">Message</label>
-                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit" class="black">Send Message</button>
-                </div>
-
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
-
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-
       </div>
-      
 
-    </section><!-- /Contact Section -->
-    
+      <div class="col-lg-7">
+        <form action="forms/contact.php" method="post" class="php-email-form yellow" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4 ">
 
-  </main>
+            <div class="col-md-6">
+              <label for="name-field" class="pb-2" style="color: black;">Your Name</label>
+              <input type="text" name="name" id="name-field" class="form-control" placeholder="Enter your name" required="">
+            </div>
+
+            <div class="col-md-6">
+              <label for="email-field" class="pb-2" style="color: black;">Your Email</label>
+              <input type="email" class="form-control" name="email" id="email-field" placeholder="Enter your email" required="">
+            </div>
+
+            <div class="col-md-12">
+              <label for="subject-field" class="pb-2" style="color: black;">Subject</label>
+              <input type="text" class="form-control" name="subject" id="subject-field" placeholder="Enter subject" required="">
+            </div>
+
+            <div class="col-md-12">
+              <label for="message-field" class="pb-2" style="color: black;">Message</label>
+              <textarea class="form-control" name="message" rows="10" id="message-field" placeholder="Type your message here" required=""></textarea>
+            </div>
+
+            <div class="col-md-12 text-center">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div>
+
+              <button type="submit" class="black">Send Message</button>
+            </div>
+
+          </div>
+        </form>
+      </div><!-- End Contact Form -->
+
+    </div>
+
+  </div>
+
+</section><!-- /Contact Section -->
+      </main>
   <!-- <hr> -->
 
   <footer id="footer" class="footer black">
@@ -963,9 +959,12 @@
         <div class="row justify-content-center text-center">
           <div class="col-lg-6">
             <h4 style="color: black;">Join Our Newsletter</h4>
-            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+            <p>Stay updated with the latest news and exclusive offers from Cloud HUB!</p>
             <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form yellow"><input type="email" name="email"><input type="submit" class="black" value="Subscribe"></div>
+              <div class="newsletter-form yellow">
+                <input type="email" name="email" placeholder="Your Email" required>
+                <input type="submit" class="black" value="Subscribe">
+              </div>
               <div class="loading">Loading</div>
               <div class="error-message"></div>
               <div class="sent-message">Your subscription request has been sent. Thank you!</div>
@@ -982,41 +981,41 @@
             <span class="sitename" style="color:white">Cloud <span class="rounded" style="background-color:rgb(234, 157, 63); color: black;">HUB</span></span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>279B, Gulgasht Colony</p>
+            <p>Multan, Punjab</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+92 319 7198382</span></p>
+            <p><strong>Email:</strong> <span>talhaameen0001@gmail.com</span></p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4 style="color:rgb(234, 157, 63)">Useful Links</h4>
           <ul>
-            <li ><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">Home</a></li>
-            <li ><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">About us</a></li>
-            <li ><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">Services</a></li>
-            <li ><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Home</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">About Us</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Services</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Terms of Service</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4 style="color:rgb(234, 157, 63)">Our Services</h4>
           <ul>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">Web Design</a></li>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">Web Development</a></li>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">Product Management</a></li>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#"style="color:rgb(234, 157, 63)">Marketing</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Web Design</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Web Development</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Product Management</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Marketing</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-12">
           <h4 style="color:rgb(234, 157, 63)">Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <p>Connect with us on social media for the latest updates and insights!</p>
           <div class="social-links d-flex">
-            <a href="" ><i class="bi bi-twitter-x" style="color:rgb(234, 157, 63)"></i></a>
-            <a href="" ><i class="bi bi-facebook" style="color:rgb(234, 157, 63)"></i></a>
-            <a href="" ><i class="bi bi-instagram" style="color:rgb(234, 157, 63)"></i></a>
-            <a href="" ><i class="bi bi-linkedin" style="color:rgb(234, 157, 63)"></i></a>
+            <a href="#"><i class="bi bi-twitter-x" style="color:rgb(234, 157, 63)"></i></a>
+            <a href="#"><i class="bi bi-facebook" style="color:rgb(234, 157, 63)"></i></a>
+            <a href="#"><i class="bi bi-instagram" style="color:rgb(234, 157, 63)"></i></a>
+            <a href="#"><i class="bi bi-linkedin" style="color:rgb(234, 157, 63)"></i></a>
           </div>
         </div>
 
@@ -1024,12 +1023,8 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename" style="color: white">Cloud HUb</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename" style="color: white">Cloud HUB</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/" style="color: white;">Ghalib</a>
       </div>
     </div>
