--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename" style="color: white">Cloud HUB</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/" style="color: white;">Ghalib</a>
+        Designed by <a href="https://bootstrapmade.com/" style="color: white;">Ghalib-MTA</a>
       </div>
     </div>
 
