--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
             <i class="bi bi-telephone flex-shrink-0" style="color: black;"></i>
             <div>
               <h3 style="color: black;">Call Us</h3>
-              <p style="color: black;">+92 319 7198382</p>
+              <p style="color: black;">+92 319 82 888 78</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -983,7 +983,7 @@
           <div class="footer-contact pt-3">
             <p>279B, Gulgasht Colony</p>
             <p>Multan, Punjab</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+92 319 7198382</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+92 319 82 888 78</span></p>
             <p><strong>Email:</strong> <span>talhaameen0001@gmail.com</span></p>
           </div>
         </div>
