--- a/index.html
+++ b/index.html
@@ -1001,10 +1001,11 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4 style="color:rgb(234, 157, 63)">Our Services</h4>
           <ul>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Web Design</a></li>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Web Development</a></li>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Product Management</a></li>
-            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Marketing</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Cloud Strategy Consulting</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Cloud Migration Services</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Cloud Security Solutions</a></li>
+            <li><i class="bi bi-chevron-right" style="color:rgb(234, 157, 63)"></i> <a href="#" style="color:rgb(234, 157, 63)">Cloud Management & Optimization</a></li>
+            
           </ul>
         </div>
 
